--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "DSA Yield ERC20 Pool Contract",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy:fork": "truffle deploy",
+    "test:fork": "truffle test",
+    "ganache:fork": "dotenv -- cross-var ganache-cli --fork https://mainnet.infura.io/v3/%INFURA_KEY% --unlock 0xfCD22438AD6eD564a1C26151Df73F6B33B817B56 --unlock 0x6b175474e89094c44da98b954eedeac495271d0f --u 0x9eb7f2591ed42dee9315b6e2aaf21ba85ea69f8c"
   },
   "repository": {
     "type": "git",
@@ -18,7 +20,11 @@
   "homepage": "https://github.com/InstaDApp/dsa-yield-contract#readme",
   "dependencies": {
     "@openzeppelin/contracts": "^3.1.0",
+    "cross-var": "^1.1.0",
+    "dotenv": "^7.0.0",
+    "dotenv-cli": "^3.2.0",
     "solc": "^0.6.8",
+    "chai": "^4.2.0",
     "truffle-assertions": "^0.9.2",
     "truffle-hdwallet-provider": "^1.0.17",
     "truffle-typings": "^1.0.8",
@@ -26,6 +32,7 @@
   },
   "devDependencies": {
     "@nomiclabs/buidler": "^1.4.3",
+    "@nomiclabs/buidler-ganache": "^1.3.3",
     "@nomiclabs/buidler-truffle5": "^1.3.4",
     "@nomiclabs/buidler-web3": "^1.3.4",
     "@openzeppelin/test-helpers": "^0.5.6",
